Arreglo CRUD Productos, vistas

--- a/src/views/SizeGuide.ejs
+++ b/src/views/SizeGuide.ejs
@@ -1,26 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/orders.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    rel="stylesheet"/>
-    <link href="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.0.4/js/v4-shims.js" rel="stylesheet"></script> 
-    <link href="https://use.fontawesome.com/releases/v5.0.4/js/fontawesome.js" rel="stylesheet"> </script>
-    <title>¿Cómo encargar?</title>
+    <link rel="stylesheet" href="/css/sizeGuide.css">
+    <title>Guía de tallas</title>
 </head>
-<body>
-    <!-- Header -->
-    <%- include ("./partials/headerMain")%>
-    <%- include ("./partials/headerNavBar")%>
-    
-    <img  class = "imagen" src ="/images/imagenes ropa/Guia de tallas_html.jpg"> 
 
-    <!-- footer -->
-    <%- include ("./partials/footer")%>
-</body>
+<!-- Header -->
+<%- include ("./partials/headerMain")%>
+
+    <body>
+        <!-- <h1>Guía de tallas</h1>
+        <h5>Mide tu cuerpo de acuerdo a las siguientes indicaciones y elige la talla correcta.
+            Pecho: Mide alrededor de la parte más completa de tu pecho,
+            pasando por debajo de los brazos. Cintura:
+            Mide alrededor de tu cintura natural, dejando un dedo entre el metro
+            y tu cuerpo. Cadera: Mide alrededor de la parte más completa, 20 abajo de tu cintura.</h5> -->
+        <div class="guia-completa">
+            <div class="card">
+                <picture class="imgBox">
+                    <img src="images/imagenes ropa/women-superior1.jpg">
+                    <img class="image2" src="images/imagenes ropa/women-guia1.jpg">
+                </picture>
+                <div class="details">
+                    <div class="content">
+                        <table class="table">
+                            <caption class="titulo">Medidas Prendas Superiores</caption>
+                            <caption>Hoodies, remeras, camperas - size Guide</caption>
+                            <tr class="celda">
+                                <th>Talla</th>
+                                <th>Contorno Pecho</th>
+                                <th>Contorno Cintura</th>
+                            </tr>
+                            <tr class="celda">
+                                <td>XS</td>
+                                <td>83 cm</td>
+                                <td>67 cm</td>
+
+                            </tr>
+                            <tr class="celda">
+                                <td>S</td>
+                                <td>87 cm</td>
+                                <td>71 cm</td>
+
+                            </tr>
+                            <tr class="celda">
+                                <td>M</td>
+                                <td>93 cm</td>
+                                <td>77 cm</td>
+                            </tr>
+
+                            <tr class="celda">
+                                <td>L</td>
+                                <td>99 cm</td>
+                                <td>83 cm</td>
+                            </tr>
+
+                            <tr class="celda">
+                                <td>XL</td>
+                                <td>105 cm</td>
+                                <td>89 cm</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <picture class="imgBox">
+                    <img src="images/imagenes ropa/women-guia3.jpg">
+                    <img class="image2" src="images/imagenes ropa/women-guia2.jpg">
+                </picture>
+                <div class="details">
+                    <div class="content">
+                        <table class="table">
+                            <caption class="titulo">Medidas Prendas Inferiores</caption>
+                            <caption>Jeans y Pantalones - size Guide</caption>
+                            <tr class="celda">
+                                <th>Talla</th>
+                                <th>Contorno Pecho</th>
+                                <th>Contorno Cintura</th>
+                            </tr>
+                            <tr class="celda">
+                                <td> 4/XS</td>
+                                <td>83 cm</td>
+                                <td>67 cm</td>
+
+                            </tr>
+                            <tr class="celda">
+                                <td>S</td>
+                                <td>87 cm</td>
+                                <td>71 cm</td>
+
+                            </tr>
+                            <tr class="celda">
+                                <td>M</td>
+                                <td>93 cm</td>
+                                <td>77 cm</td>
+                            </tr>
+
+                            <tr class="celda">
+                                <td>L</td>
+                                <td>99 cm</td>
+                                <td>83 cm</td>
+                            </tr>
+
+                            <tr class="celda">
+                                <td>XL</td>
+                                <td>105 cm</td>
+                                <td>89 cm</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <section>
+
+            <div class="guia-completa">
+                <div class="card">
+                    <picture class="imgBox">
+                        <img src="images/imagenes ropa/men-guia2.jpg">
+                        <img class="image2" src="images/imagenes ropa/men-guia1.jpg">
+                    </picture>
+                    <div class="details">
+                        <div class="content">
+                            <table class="table">
+                                <caption class="titulo">Medidas Prendas Superiores</caption>
+                                <caption>Hoodies, remeras, camperas - size Guide</caption>
+                                <tr class="celda">
+                                    <th>Talla</th>
+                                    <th>Contorno Pecho</th>
+                                    <th>Contorno Cintura</th>
+                                </tr>
+                                <tr class="celda">
+                                    <td>XS</td>
+                                    <td>83 cm</td>
+                                    <td>67 cm</td>
+    
+                                </tr>
+                                <tr class="celda">
+                                    <td>S</td>
+                                    <td>87 cm</td>
+                                    <td>71 cm</td>
+    
+                                </tr>
+                                <tr class="celda">
+                                    <td>M</td>
+                                    <td>93 cm</td>
+                                    <td>77 cm</td>
+                                </tr>
+    
+                                <tr class="celda">
+                                    <td>L</td>
+                                    <td>99 cm</td>
+                                    <td>83 cm</td>
+                                </tr>
+    
+                                <tr class="celda">
+                                    <td>XL</td>
+                                    <td>105 cm</td>
+                                    <td>89 cm</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="card">
+                    <picture class="imgBox">
+                        <img src="images/imagenes ropa/men-guia4.jpg">
+                        <img class="image2" src="images/imagenes ropa/men-guia3.jpg">
+                    </picture>
+                    <div class="details">
+                        <div class="content">
+                            <table class="table">
+                                <caption class="titulo">Medidas Prendas Superiores</caption>
+                                <caption>Hoodies, remeras, camperas - size Guide</caption>
+                                <tr class="celda">
+                                    <th>Talla</th>
+                                    <th>Contorno Pecho</th>
+                                    <th>Contorno Cintura</th>
+                                </tr>
+                                <tr class="celda">
+                                    <td>XS</td>
+                                    <td>83 cm</td>
+                                    <td>67 cm</td>
+    
+                                </tr>
+                                <tr class="celda">
+                                    <td>S</td>
+                                    <td>87 cm</td>
+                                    <td>71 cm</td>
+    
+                                </tr>
+                                <tr class="celda">
+                                    <td>M</td>
+                                    <td>93 cm</td>
+                                    <td>77 cm</td>
+                                </tr>
+    
+                                <tr class="celda">
+                                    <td>L</td>
+                                    <td>99 cm</td>
+                                    <td>83 cm</td>
+                                </tr>
+    
+                                <tr class="celda">
+                                    <td>XL</td>
+                                    <td>105 cm</td>
+                                    <td>89 cm</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+        <!-- <img class="imagen" src="/images/imagenes ropa/Guia de tallas_html.jpg"> -->
+
+        <!-- footer -->
+
+    </body>
+    <!-- <%- include ("./partials/footer")%> -->
+
 </html>
