--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,15 +1,18 @@
 .footer  {
-    background: linear-gradient(90deg, #1c3643,#273b47,25%,#1e5372);
-    padding: 30px  ;  
+    /* background: linear-gradient(90deg, #668392,#273b47,25%,#1e5372); */
+    padding: 20px  ;  
     align-items: center; 
-    
-
+    background-image: url("/images/fondos/fondo_V07.jpg");
+    background-repeat: repeat;
+    background-size: 100px; 
+    font-family: Be Vietnam Pro;
 }
+
 .footer-col{
     width: 30%;
     padding: 0px; 
     margin: 20px; 
-    
+    color: #fff;
 }
 
 .img-footer{
