--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -120,6 +120,60 @@
     background: linear-gradient(to right, gray, white);
 }
 
+/* Estilos menú desplegable de usuarios*/
+
+.dropdown{
+    display: inline-block;
+    position: relative;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
+
+.user-menu-button{
+    padding: 10px;
+    border-radius: 4px; 
+    background-color: transparent;
+    color:#EFFD6D
+}
+
+.avatar-mini{
+    /* width: 2%;
+    border-radius: 50%; */
+    width: 20px;
+    height: 20px; 
+    border-radius: 10px;
+    margin-top: 10px;
+}
+  
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    width: 80%;
+    overflow: auto;
+    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.4);
+    border-radius: 2px;
+  }
+
+.dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  .dropdown-content a {
+    display: block;
+    color: #000000;
+    padding: 5px;
+    text-decoration: none;
+
+  }
+
+  .dropdown-content a:hover {
+    color: black;
+    background-color: red;
+  }
+
+
+
 /* estilos Guia de tallas, como encargar, banner */
 .banner{
     display: none;
@@ -182,6 +236,8 @@
     color: black;
 }
 
+ /* estilos main inferior */
+
 .main_inferior{
     text-align: center;
 }
@@ -194,25 +250,43 @@
 }
 
 .guia-tallas{
-    border: 0.4px solid gray;
-    padding: 5px;
-    width: 240px;
-    z-index: -1;
-    margin-top: 10px;
-    position: static;
-  }
+    margin: 15px;
+    padding: 16px 26px 55px 26px;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+    background-color: rgb(247, 244, 244);
+}
 
 .encargos{
-    border: 0.4px solid gray;
-    padding: 5px;
-    width: 240px;
-    position: static;
+    margin: 15px;
+    padding: 16px 26px 55px 26px;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+    background-color: rgb(247, 245, 245);
+}
+.descuentos{
+    margin: 15px;
+    padding: 16px 26px 55px 26px;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+    background-color: rgb(247, 245, 245);
+}
+
+.trabajo{
+    margin: 15px;
+    padding: 16px 26px 55px 26px;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+    background-color: rgb(247, 245, 245);
 }
 
 
-
 .main_inferior img{
-    max-width: 240px;  
+    max-width: 200px;  
 }
 
 
@@ -223,21 +297,29 @@
     font-weight: bold;
 }
 
-.boton {
-    font-size: 6.8px;
-    border: solid 1px black;
-    max-width: 60px;
+  
+.boton{
+    font-size: 80%;
+    text-align: center;
+    border-radius: 7px;
     padding: 8px 8px 8px 8px;
-    margin-bottom: 12px;
-    /* margin: 0 auto; */
-    /* margin-left: 90px; */
-    background: transparent;
-    color: #ffffff;
-    border-radius: 5px;
+    margin-bottom: 20px;
+    background-color: rgb(255, 253, 253);
+    color:rgb(230, 198, 198);
+    border: 1px solid rgb(35, 36, 37);
+    transition-duration: 0.4s;
+    margin-bottom: 25px;
     text-align: center;
     position: absolute;
     justify-content: center;
-    }
+  }
+
+  .boton:hover{
+    background-color: rgb(247, 213, 213);
+    color: white;
+  }
+
+/* //--------- */
 
 .tres_columnas{
     text-align: center;
@@ -286,6 +368,10 @@ border-top: 0.5px solid black;
   padding: 0;
   margin: 20px;
 }
+
+/* mediaquery de las tarjetas guia de tallas */
+
+
 @media (min-width: 388px) and (max-width: 400px){
     .logo{
         margin-left: 20px;
@@ -345,6 +431,16 @@ border-top: 0.5px solid black;
 
     .banner{
         display: block;
+    }
+
+    .main_inferior{
+        display: flex;
+        /* justify-content: space-around; */
+        justify-content: space-around;
+    }    
+
+    .main_inferior img{
+        max-width: 220px;  
     }
 
 
