--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -7,13 +7,13 @@
     <div class="footer-col">
             <h4>Contacto</h4>
             <ul>
-                <li><a href= "#">Envios</a></li>
+                <li><a href= "#">Envíos</a></li>
                 <li><a href= "#">Devoluciones</a></li>
-                <li><a href= "#">Guia de Compra</a></li>
+                <li><a href= "#">Preguntas frecuentes</a></li>
             </ul>
         </div>
         <div class="footer-col">
-            <h4>Desarroladores</h4>
+            <h4>Team</h4>
             <div class="dev-cont">
                 <p>Julieth </p>
                 <img src="/images/icon/juan.PNG" alt="">
