--- a/public/css/store.css
+++ b/public/css/store.css
@@ -1,72 +1,111 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro&family=Roboto&display=swap');
+
+body {
   margin: 0px;
-  background-color: aliceblue;
-  font-family: roboto, sans-serif;
+  background-color: white;
+  font-family: Be Vietnam Pro;
 }
-.page-nav{
+
+.page-nav {
   border: 1px solid black;
 }
-.page-nav h1{
+
+.page-nav h1 {
   margin: 20px;
   font-size: 20px;
   color: black;
 }
-.store-encabezado{
+
+.store-encabezado {
   margin: 20px;
   font-size: 20px;
   text-align: center;
 }
-.store-subtitulo{
+
+.store-subtitulo {
   margin: 20px 20px 20px 150px;
   font-size: 20px;
   text-align: left;
 }
-.page-products{
-  display: flex;
+
+.page-products {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+
+  /* display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin: 1px solid black;
-
+  margin: 1px solid black; */
 }
+
 .product-container {
   margin: 15px;
-  padding: 2px 16px;
-  border-radius: 10px;
+  padding: 20px 16px;
   position: relative;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
-  background-color: white;
-}
-.product-container:hover{
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-.product-container img{
-
-  width:500px;
-  height:500px;
-  border-radius: 10px;
-}
-.product-container p{
-  margin-bottom:-10 ;
-  font-size: 20px ;
-  color:black;
-  font-weight: bold;
-}
-.button-buy:hover{
-  background-color: rgb(5, 50, 90);
-  color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  /* background-color: white; */
 }
 
-.button-buy{
+.product-container:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.product-container img {
+  width: 95%;
+  height: auto;
+  display: flex;
+  align-items: center;
+}
+
+.button-buy {
   font-size: 16px;
   text-align: center;
-  border-radius: 7px;
-  padding:10px 25px;
+  padding: 10px 25px;
   background-color: white;
-  color:rgb(5, 50, 90);
-  border: 1px solid rgb(158, 185, 228);
+  color: rgb(9, 10, 10);
+  border: 1px solid rgb(0, 0, 0);
   transition-duration: 0.4s;
   margin-bottom: 8px;
   position: absolute;
-  right: 15px;
-  bottom: 2px;
+  right: 25px;
+  bottom: 60px;
+}
+
+.button-buy:hover {
+  background-color: rgb(0, 4, 8);
+  color: white;
+}
+
+.talla-disponible {
+  font-size: 12px;
+  text-align: center;
+  padding: 5px 20px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(9, 10, 10);
+  border: 1px solid rgb(0, 0, 0);
+  margin-bottom: 8px;
+  position: absolute;
+}
+
+h3 a {
+  text-decoration: none;
+  outline: none;
+  color: black;
+  font-size: 22px;
+}
+
+.nombre {
+  margin-bottom: 10px;
+}
+
+.product-container .precio {
+  margin-top: 15px;
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.product-container .descripcion {
+  color: black;
+  font-size: 18px;
 }
