cookies y detalles finales

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -38,7 +38,7 @@
                 <% } %>
             </div>
             <div>
-              <label for=""><input type="checkbox" name="remember-user"> Recordar mi cuenta</label>
+              <label for=""><input type="checkbox" name="userEmail"> Recordar mi cuenta</label>
             </div>
             <div class="account-buttons">
               <button type="submit" class="account sub">Iniciar sesión</button>
