--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -75,7 +75,7 @@
                                         </div>
 
                                         <div class="avatar">
-                                            <h4 class="title">Elije la foto del producto</h4>
+                                            <h4 class="title">Elije tu Foto</h4>
                                             <input type="file" name="avatar" class="avatar-profile" id="foto-Profile">
                                         </div>
 
