--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -15,17 +15,28 @@
             <div>
                 <div>
                     <div>
-                        <h2>Hola <%= user.nombres%> </h2>
-                        <p><%=user.avatar %></p>
-                        <img src="/images/avatars/<%=user.avatar%>">
+                        <h2>Hola <%= locals.user.nombres%> </h2>
+                        
+                        <img src="/images/avatars/<%=locals.user.avatar%>">
                         <br>
                         <br>
                         <div>
-                            <%= user.email %> 
+                            <%= locals.user.email %> 
                         </div>
                     </div>
                 </div>
             </div>
+
+            <a href="/editProfile/<%= locals.user.id %> ">
+                <button class="button-buy">editar</button>
+                </a>
+                <form action="/deleteProfile/<%= locals.user.id %> " method="POST">
+                    <button type="submit" class="button-buy">borrar</button>
+                    </form>
+
+                    <form action="/logout/">
+                        <button type="submit" class="button-buy">Cerrar Sesion</button>
+                        </form>
 
 
         </body>
